[gd_scene load_steps=4 format=3 uid="uid://ytf0hlccw1ia"]

[ext_resource type="Script" path="res://phone/chat.gd" id="1_7l83e"]
[ext_resource type="Theme" uid="uid://dpxg4eclat4vv" path="res://phone/default_theme.tres" id="3_c7dsc"]
[ext_resource type="Texture2D" uid="uid://bay42xckqhybc" path="res://icon.svg" id="4_v2jhf"]

[node name="MarginContainer" type="MarginContainer"]
offset_right = 389.0
offset_bottom = 378.0
mouse_filter = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 48
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 32
script = ExtResource("1_7l83e")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 2
color = Color(0.0117647, 0.027451, 0.0313726, 1)

[node name="Img5753" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.521084, 0.521084)
texture = ExtResource("4_v2jhf")
centered = false

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 0

[node name="ColorRect" type="ColorRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="Status" type="Label" parent="VBoxContainer/ColorRect"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.372549)
layout_mode = 0
offset_left = 115.0
offset_top = 27.0
offset_right = 167.0
offset_bottom = 53.0
theme_override_font_sizes/font_size = 12
text = "online"

[node name="Button" type="Button" parent="VBoxContainer/ColorRect"]
layout_mode = 0
offset_right = 59.0
offset_bottom = 53.0
theme = ExtResource("3_c7dsc")
theme_override_font_sizes/font_size = 32
text = "<"
flat = true

[node name="ContactName" type="Label" parent="VBoxContainer/ColorRect"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 115.0
offset_top = 6.0
offset_right = 155.0
offset_bottom = 32.0
text = "Giadi"

[node name="ContactImage" type="TextureRect" parent="VBoxContainer/ColorRect"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 0
offset_left = 62.0
offset_top = 4.0
offset_right = 104.0
offset_bottom = 46.0
texture = ExtResource("4_v2jhf")
expand_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(0, 525)
layout_mode = 2
mouse_filter = 0
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="Chat" type="VBoxContainer" parent="VBoxContainer/MarginContainer/ScrollContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(374, 525)
layout_mode = 2
mouse_filter = 2

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ColorRect2" type="ColorRect" parent="VBoxContainer/MarginContainer2"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="Replies" type="GridContainer" parent="VBoxContainer/MarginContainer2"]
unique_name_in_owner = true
visible = false
layout_mode = 2
mouse_filter = 2
columns = 3

[node name="s" type="Button" parent="VBoxContainer/MarginContainer2/Replies"]
custom_minimum_size = Vector2(127, 46)
layout_mode = 2
theme = ExtResource("3_c7dsc")
flat = true

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/MarginContainer2/Replies/s"]
custom_minimum_size = Vector2(1, 0)
layout_mode = 0
offset_left = 125.0
offset_top = 10.0
offset_right = 126.0
offset_bottom = 40.0
color = Color(1, 1, 1, 0.254902)

[node name="Button2" type="Button" parent="VBoxContainer/MarginContainer2/Replies"]
custom_minimum_size = Vector2(127, 46)
layout_mode = 2
theme = ExtResource("3_c7dsc")
flat = true

[node name="ColorRect2" type="ColorRect" parent="VBoxContainer/MarginContainer2/Replies/Button2"]
custom_minimum_size = Vector2(1, 0)
layout_mode = 0
offset_left = 140.0
offset_top = 10.0
offset_right = 141.0
offset_bottom = 40.0
color = Color(1, 1, 1, 0.254902)

[node name="Button3" type="Button" parent="VBoxContainer/MarginContainer2/Replies"]
custom_minimum_size = Vector2(127, 46)
layout_mode = 2
theme = ExtResource("3_c7dsc")
flat = true

[node name="TextEdit" type="LineEdit" parent="VBoxContainer/MarginContainer2"]
unique_name_in_owner = true
layout_mode = 2
max_length = 30

[node name="Send" type="Button" parent="VBoxContainer/MarginContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
size_flags_horizontal = 8
text = "Send"

[connection signal="pressed" from="VBoxContainer/ColorRect/Button" to="." method="_back_pressed"]
[connection signal="text_submitted" from="VBoxContainer/MarginContainer2/TextEdit" to="." method="_text_submitted"]
